--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,42 +1,61 @@
 # 워크플로우 이름
 name: Build and Release PlanForge
 
+# 'v'로 시작하는 태그(예: v1.0, v1.2.1)가 푸시될 때 워크플로우를 실행합니다.
 on:
   push:
     tags:
       - 'v*'
 
+# 워크플로우가 GitHub 릴리즈를 생성하고 파일을 업로드할 수 있도록 권한을 부여합니다.
 permissions:
   contents: write
 
 jobs:
   build-and-release:
+    # Windows 환경에서 작업을 실행합니다.
     runs-on: windows-latest
 
     steps:
+      # 1. 소스 코드 체크아웃
       - name: Checkout code
         uses: actions/checkout@v4
 
+      # 2. Python 3.12 환경 설정
       - name: Set up Python
         uses: actions/setup-python@v5
         with:
           python-version: '3.12'
 
+      # 3. pip 캐시 설정 (빌드 속도 향상)
+      # requirements.txt 파일이 변경되지 않았다면, 캐시된 패키지를 사용하여 설치 시간을 단축합니다.
+      - name: Cache pip dependencies
+        uses: actions/cache@v4
+        with:
+          path: ~\AppData\Local\pip\Cache
+          key: ${{ runner.os }}-pip-${{ hashFiles('**/requirements.txt') }}
+          restore-keys: |
+            ${{ runner.os }}-pip-
+
+      # 4. 의존성 패키지 설치
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
           pip install pyinstaller
 
-      # 4. PyInstaller로 .exe 파일 빌드 (config 폴더 추가 부분 제거)
+      # 5. PyInstaller로 실행 파일(.exe) 빌드
+      # --add-data "assets;assets": 'assets' 폴더와 그 안의 파일들을 빌드 결과물에 포함시킵니다.
+      # --icon="assets/logo.ico": 'assets' 폴더의 아이콘을 실행 파일 아이콘으로 지정합니다.
       - name: Build with PyInstaller
         run: pyinstaller --name "PlanForge" --onedir --windowed --icon="assets/logo.ico" --add-data "assets;assets" --hidden-import pygame --hidden-import Pillow --hidden-import keyboard PlanForge.py
 
-      # 5. 빌드 결과물(dist/PlanForge 폴더)을 zip 파일로 압축
+      # 6. 빌드 결과물을 zip 파일로 압축
+      # dist/PlanForge 폴더를 PlanForge-v1.0.zip 과 같은 이름으로 압축합니다.
       - name: Zip the build folder
         run: Compress-Archive -Path dist/PlanForge -DestinationPath "PlanForge-${{ github.ref_name }}.zip"
       
-      # 6. 릴리즈 생성 및 압축 파일(Asset) 업로드
+      # 7. GitHub 릴리즈 생성 및 압축 파일 업로드
       - name: Create Release and Upload Asset
         uses: softprops/action-gh-release@v2
         with:
