설정 파일에서 항목 5의 값을 'False'에서 'True'로 변경하고, PlanForge.py에서 엑셀 서식 관련 라이브러리를 추가했습니다. 또한, 품목 순서 변경 다이얼로그를 추가하고, 품목 정보를 재정렬하여 저장하는 기능을 구현했습니다. 재고 반영 및 계획 시뮬레이션 관련 UI 요소의 텍스트를 수정했습니다.

--- a/config.json
+++ b/config.json
@@ -3,14 +3,14 @@
     "LEAD_TIME_DAYS": 2,
     "PALLETS_PER_TRUCK": 36,
     "MAX_TRUCKS_PER_DAY": 3,
-    "FONT_SIZE": 24,
+    "FONT_SIZE": 21,
     "DELIVERY_DAYS": {
         "0": "True",
         "1": "True",
         "2": "True",
         "3": "True",
         "4": "True",
-        "5": "False",
+        "5": "True",
         "6": "False"
     },
     "NON_SHIPPING_DATES": [],
