Update configuration settings and add documentation
- Reduced lead time from 2 days to 1 day in config.json
- Decreased maximum trucks per day from 3 to 2 in config.json
- Increased font size from 21 to 28 in config.json
- Added daily truck overrides for specific dates in config.json
- Introduced new appearance mode and auto-save path settings in config.json
- Created CLAUDE.md for project overview, dependencies, running instructions, architecture, and development notes

--- a/config.json
+++ b/config.json
@@ -1,9 +1,9 @@
 {
     "PALLET_SIZE": 60,
-    "LEAD_TIME_DAYS": 2,
+    "LEAD_TIME_DAYS": 1,
     "PALLETS_PER_TRUCK": 36,
-    "MAX_TRUCKS_PER_DAY": 3,
-    "FONT_SIZE": 21,
+    "MAX_TRUCKS_PER_DAY": 2,
+    "FONT_SIZE": 28,
     "DELIVERY_DAYS": {
         "0": "True",
         "1": "True",
@@ -14,5 +14,12 @@
         "6": "False"
     },
     "NON_SHIPPING_DATES": [],
-    "DAILY_TRUCK_OVERRIDES": {}
+    "DAILY_TRUCK_OVERRIDES": {
+        "2025-09-18": 3,
+        "2025-09-22": 3,
+        "2025-09-26": 3
+    },
+    "APPEARANCE_MODE": "Light",
+    "AUTO_SAVE_PATH": "C:\\Users\\repla\\Downloads",
+    "DAILY_PALLET_OVERRIDES": {}
 }
